Add Stream support for writer too with limitation of heading check only made on first write